--- a/templates.html
+++ b/templates.html
@@ -15,7 +15,7 @@
 </script>
 
 <script type="text/template" id="template-comparer-featurefields">
-    <div class="comparer-feature-col">
+    <div class="comparer-feature-col-fields">
         <div class="comparer-selection-badge"></div>
         <ul class="comparer-feature-fields">
             <% _.each(fieldInfos, function(info) { %>
